# machine-learning-rust

./: .gitignore  ML-workflow.md  README.md  index.html  style.css
decision_tree/: Cargo.toml
decision_tree/src/: main.rs  plotting_utils.rs
hello_world/src/: main.rs
pima/: Cargo.toml  model_output.txt
pima/src/: iris_agg.rs  linfa_example.rs  main.rs  pima_classification.rs  pima_classification_general.rs  pima_classification_lr.rs  pima_eda.rs  smartcore_example.rs
plotting/: Cargo.toml
plotting/images/: heatmap.html  scatter_plot.html
plotting/src/: csv_reader.rs  heatmap.rs  main.rs  plotters_examples.rs  scatter.rs
polars/: data_manipulation.ipynb  data_manipulation.py  pima_EDA.ipynb  pima_EDA.py
read_array/: Cargo.toml
read_array/src/: main.rs
