[package]
name = "pima"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
polars = { version = "0.24.0", features = ["describe", "lazy", "csv-file", "strings", 
                                            "temporal", "dtype-duration", "dtype-categorical", 
                                            "concat_str", "list", "list_eval", "rank", 
                                            "lazy_regex", "abs","cum_agg","round_series",
                                            "object"]}
reqwest = { version = "0.11.11", features = ["blocking"] }
