[package]
name = "pima"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conv = "0.3.3"
statrs = "0.16.0"
color-eyre = "0.6.2"
smartcore = { version = "0.3.0", features = ["ndarray-bindings"] }
linfa = "0.6.1"
linfa-logistic = "0.6.1"
linfa-datasets = { version = "0.6.1", features = ["winequality"] }
ndarray = "0.15.4"
ndarray-stats = "0.5.1"
polars = { version = "0.24.0", features = ["describe", "lazy", "csv-file", "strings", 
                                            "dtype-datetime", "ndarray",
                                            "temporal", "dtype-duration", "dtype-categorical", 
                                            "concat_str", "list", "list_eval", "rank", 
                                            "lazy_regex", "abs","cum_agg","round_series",
                                            "object", "rows"]}
reqwest = { version = "0.11.11", features = ["blocking"] }
