[package]
name = "plotting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools-num = "0.1"
color-eyre = "0.6.2"
polars = { version = "0.24.0", features = ["describe", "lazy", "csv-file", "strings"] }
csv = "1.1"
serde = { version = "1", features = ["derive"] }
fast-float = { version = "0.2" }
plotters = "0.3.1"
plotly = { version = "0.6.0", features = ["kaleido", "plotly_ndarray"] }
reqwest = { version = "0.11.11", features = ["blocking"] }
